<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PaintActivity"
    android:background="@color/myWhite">

    <LinearLayout
        android:id="@+id/fullScreenWindow"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <RelativeLayout
            android:id="@+id/paintOptions"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:background="@color/AppBarColor"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/back"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:layout_marginTop="7.5dp"
                android:layout_marginBottom="7.5dp"
                android:contentDescription="@string/back"
                app:srcCompat="@drawable/back"
                tools:ignore="VectorDrawableCompat" />

            <ImageView
                android:id="@+id/share"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:layout_marginTop="7.5dp"
                android:layout_marginEnd="0dp"
                android:layout_marginRight="0dp"
                android:layout_marginBottom="7.5dp"
                android:layout_toStartOf="@+id/save"
                android:layout_toLeftOf="@+id/save"
                android:contentDescription="@string/share"
                app:srcCompat="@drawable/share"
                tools:ignore="VectorDrawableCompat" />

            <ImageView
                android:id="@+id/save"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:layout_marginTop="7.5dp"
                android:layout_marginEnd="0dp"
                android:layout_marginRight="0dp"
                android:layout_marginBottom="7.5dp"
                android:layout_toStartOf="@+id/download"
                android:layout_toLeftOf="@+id/download"
                android:contentDescription="@string/save"
                app:srcCompat="@drawable/save"
                tools:ignore="VectorDrawableCompat" />

            <ImageView
                android:id="@+id/download"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginTop="7.5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="7.5dp"
                android:contentDescription="@string/download"
                app:srcCompat="@drawable/download"
                tools:ignore="VectorDrawableCompat" />

        </RelativeLayout>

        <com.example.sketchbook.Model.PaintView
            android:id="@+id/paintTab"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

        </com.example.sketchbook.Model.PaintView>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/toolsTab"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:background="@color/AppBarColor"/>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>