<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#e3e3e1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="5dp">

        <androidx.cardview.widget.CardView
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_margin="5dp"
            android:background="@color/AppBarColor"
            app:cardCornerRadius="35dp">

            <ImageView
                android:id="@+id/toolImage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/toolsimage"
                android:background="@color/AppBarColor"
                android:padding="10dp"
                tools:ignore="HardcodedText">
            </ImageView>

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp">

            <TextView
                android:id="@+id/toolSelected"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textColor="@color/AppBarColor">
            </TextView>

            <SeekBar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:thumbTint="@color/AppBarColor"
                android:progressTint="@color/AppBarColor"
                android:id="@+id/sizeSeekBar"
                tools:targetApi="lollipop">
            </SeekBar>

            <TextView
                android:id="@+id/toolSize"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:textColor="@color/AppBarColor"
                android:textSize="16sp">
            </TextView>

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/cancel"
            android:textSize="20sp"
            android:textColor="@color/AppBarTitleColor"
            android:backgroundTint="@color/AppBarColor"
            android:layout_weight="1"
            android:layout_margin="5dp"
            tools:targetApi="lollipop"
            style="?android:attr/buttonBarButtonStyle">
        </Button>

        <Button
            android:id="@+id/ok"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/ok"
            android:gravity="center"
            android:textSize="20sp"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:backgroundTint="@color/AppBarColor"
            android:textColor="@color/AppBarTitleColor"
            style="?android:attr/buttonBarButtonStyle"
            tools:targetApi="lollipop">
        </Button>

    </LinearLayout>

</LinearLayout>